--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
     
     <style type="text/css">
 	    <!--
+	      /*
 	      body {
 	        background-color: #223;
 	        color: #fff;
@@ -32,7 +33,7 @@
           color: #fff;
         }
         
-        /* form-control */
+        /* form-control 
         .form-control:valid {
           background-color: #223!important;
           color: #fff;
@@ -42,7 +43,7 @@
           background-color: rgba(255, 0, 0, 0.25)!important;
           color: #fff;
         }
-        
+        */
 	  </style>
   </head>
 
