--- a/app/views/matches/_report.html.erb
+++ b/app/views/matches/_report.html.erb
@@ -22,7 +22,7 @@
             <%= f.hidden_field :player2, value: @player2 %>
             <%= f.number_field :player2_score, class: "form-control mb-2" %>
             
-            <%= f.submit "スコア報告", class: "btn btn-secondary btn-block btn-login" %>
+            <%= f.submit "スコア報告", class: "btn btn-primary btn-block btn-login" %>
           <% end %>
         </div>
       </div>
