--- a/app/views/messages/_inbox.html.erb
+++ b/app/views/messages/_inbox.html.erb
@@ -5,7 +5,7 @@
       <% @message_inbox.each do |message| %>
         <% sendUser = send_user(message) %>
         <%= f.fields_for "messages[]", message do |msg| %>
-          <div class="my-2 bg-dark <%= "border border-warning" if message.read_at.nil? || message.edited_at > message.read_at %>">
+          <div class="my-2 bg-light border <%= "border-success" if message.read_at.nil? || message.edited_at > message.read_at %>">
             <div class="d-flex justify-content-between">
               <div class="p-1">
                 <% if sendUser.present? %>
@@ -28,7 +28,7 @@
       <% end %>
     <div class="d-flex justify-content-between">
       <div><%= will_paginate @message_inbox, {:param_name => 'inbox_page', :class => 'pagination'} %></div>
-      <div><%= f.submit "まとめて削除する", data: { confirm: "削除してよろしいですか？（取消できません）" }, class: "btn btn-lg btn-warning" %></div>
+      <div><%= f.submit "まとめて削除する", data: { confirm: "削除してよろしいですか？（取消できません）" }, class: "btn btn-lg btn-danger" %></div>
     </div>
     <% end %>
   <% else %>
