--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -76,7 +76,7 @@
         $("#user_name_count").css("color","red");
         $("#edit_submit").prop('disabled', true);
       } else {
-        $("#user_name_count").css("color","white");
+        $("#user_name_count").css("color","black");
         $("#edit_submit").prop('disabled', false);
       }
       $("#user_name_count").text( "残り" + now_name_count + "文字");
