--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -76,32 +76,30 @@ p {
   font-size: 1.1em;
   line-height: 1.7em;
 }
-
+/*
 th, td {
   color: #fff;
 }
-        
-a.dropdown-item, a.nav-link.drawer-menu-item {
-  color: #fff;
-  .font-weight-bold:hover {
-    color: #000;
-  }
+*/
+.header {
+  color: #000;
 }
-
+/*
 a.nav-link.text-reset.font-weight-bold.active,
 #userpageDropdown[aria-expanded="true"],
 div.card,
 div.dropdown-menu.show {
   background-color: #343A40;
 }
+*/
 /* datepiker */
-
+/*
 div.bootstrap-datetimepicker-widget.dropdown-menu.usetwentyfour {
   background-color: #111;
   color: #fff;
   width: 275px;
 }
-
+*/
 .datepicker-days th.dow:first-child,
 .datepicker-days td:first-child {
   color: #f00;
@@ -111,7 +109,7 @@ div.bootstrap-datetimepicker-widget.dropdown-menu.usetwentyfour {
 .datepicker-days td:last-child {
   color: #00f;
 }
-
+/*
 .bootstrap-datetimepicker-widget table td.active,
 .bootstrap-datetimepicker-widget table td.active:hover {
   background-color: #444;
@@ -141,7 +139,7 @@ table.table-condensed tr td.second:hover,
   background-color: #444;
 }
 
-/* select2 */
+// select2 
 .select2-selection.select2-selection--single,
 .select2-selection.select2-selection--multiple,
 .selection.select2,
@@ -163,13 +161,13 @@ table.table-condensed tr td.second:hover,
   color: #fff;
 }
 
-/* select2 選択された要素のタイトルはどうしてもidを指定しないと変化しない */
+// select2 選択された要素のタイトルはどうしてもidを指定しないと変化しない 
 #select2-user_id-container, 
 #select2-user_to-container,
 #select2-master-container {
   color: #fff;
 }
-
+*/
 /* header */
 
 #logo {
