--- a/app/views/tournaments/_toggle.html.erb
+++ b/app/views/tournaments/_toggle.html.erb
@@ -1,13 +1,13 @@
 <% case @state %>
 <% when 'open' %>
   <div class="row justify-content-between m-1">
-    <span>現在開催中のマッチ</span><p><%= link_to "終了", tournament_toggle_path(@tournament, :state => 'complete'), remote: true, class: "btn btn-secondary" %></p>
+    <span>現在開催中のマッチ</span><p><%= link_to "終了", tournament_toggle_path(@tournament, :state => 'complete'), remote: true, class: "btn btn-primary" %></p>
   </div>
   <div class="d-none d-lg-block"><!-- 画面幅lg以上で表示 -->
     <% if !@matches_opening.blank? %>
       <% @matches_opening.each do |matches| %>
         <%= return_user_from_participant(matches["match"]["player1_id"]).name + " vs " + return_user_from_participant(matches["match"]["player2_id"]).name + "  " %>
-        <%= link_to "報告", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-warning mb-2" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %><br>
+        <%= link_to "報告", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-success mb-2" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %><br>
       <% end %>
     <% else %>
       <p>なし</p>
@@ -20,7 +20,7 @@
           <% @matches_opening.each do |matches| %>
             <div class="col-6">
               <%= return_user_from_participant(matches["match"]["player1_id"]).name + " vs " + return_user_from_participant(matches["match"]["player2_id"]).name + "  " %>
-              <%= link_to "報告", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-warning mb-2" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %>
+              <%= link_to "報告", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-success mb-2" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %>
             </div>
           <% end %>
         <% else %>
@@ -31,7 +31,7 @@
   </div><!-- d-lg-none 画面幅lg未満で表示 -->
 <% when 'complete' %>
   <div class="row justify-content-between m-1">
-    <span>終了済のマッチ</span><p><%= link_to "開催中", tournament_toggle_path(@tournament, :state => 'open'), remote: true, class: "btn btn-secondary" %></p>
+    <span>終了済のマッチ</span><p><%= link_to "開催中", tournament_toggle_path(@tournament, :state => 'open'), remote: true, class: "btn btn-primary" %></p>
   </div>
   <div class="d-none d-lg-block"><!-- 画面幅lg以上で表示 -->
     <% if !@matches_complete.blank? %>
