--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -4,11 +4,11 @@
 
 <div class="title">トーナメント一覧</div>
   <p>
-    <button type="button" class="btn btn-warning" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
       検索オプション
     </button>
   </p>
-  <div class="collapse bg-dark my-2" id="collapseExample">
+  <div class="collapse bg-light my-2" id="collapseExample">
     <%= form_with(url: tournaments_path, method: :get) do |fo| %>
       <%= fo.hidden_field :tournaments, value: "tournaments_search" %>
       <div class="p-auto mx-auto row justify-content-between align-items-center col-lg">
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="col-lg-12">
-          <%= fo.submit "検索する", class: "btn btn-secondary btn-block my-3" %>
+          <%= fo.submit "検索する", class: "btn btn-primary btn-block my-3" %>
         </div>
       </div>
     <% end %>
