--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -9,7 +9,7 @@
             <div class="card-header" role="tab" id="headingOne">
               <h5 class="mb-0">
                 <a class="text-body" data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="true" aria-controls="collapseOne">
-                  <button type="button" class="btn btn-secondary">
+                  <button type="button" class="btn btn-primary">
                     <% if master?(@tournament) %>
                       参加者を追加する
                     <% else %>
@@ -24,12 +24,12 @@
                 <% if master?(@tournament) #開催者用追加フォーム %>
                   <%= form_with(model: @participant, url: tournament_creates_path(@tournament), method: :post) do |f| %>
                     <%= select_tag :players, options_from_collection_for_select(@not_yet_users, :id, :name), multiple: true, class: "form-control search_participants" %>
-                    <%= f.submit "参加者追加", class: "btn btn-secondary btn-block btn-login" %>
+                    <%= f.submit "参加者追加", class: "btn btn-primary btn-block btn-login" %>
                   <% end %>
                 <% else #参加者用追加フォーム %>
                   <%= form_with(model: @participant, url: tournament_participants_path(@tournament), method: :post) do |f| %>
                     <%= hidden_field_tag :players, current_user.id %>
-                    <%= f.submit "この大会に参加する", data: { confirm: "大会に参加しますか？" }, class: "btn btn-secondary btn-block btn-login" %>
+                    <%= f.submit "この大会に参加する", data: { confirm: "大会に参加しますか？" }, class: "btn btn-primary btn-block btn-login" %>
                   <% end %>
                 <% end %>
               </div><!-- /.card-body -->
@@ -41,7 +41,7 @@
             <div class="card-header" role="tab" id="headingTwo">
               <h5 class="mb-0">
                 <a class="collapsed text-body" data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">
-                  <button type="button" class="btn btn-secondary">一括送信</button>
+                  <button type="button" class="btn btn-primary">一括送信</button>
                 </a>
               </h5>
             </div><!-- /.card-header -->
@@ -58,7 +58,7 @@
                   <%= f.label "本文" %>
                   <%= f.text_area :text, class: "form-control" %>
                   
-                  <%= f.submit "メッセージを送信する", class: "btn btn-secondary btn-block btn-login" %>
+                  <%= f.submit "メッセージを送信する", class: "btn btn-primary btn-block btn-login" %>
                 <% end %>
               </div><!-- /.card-body -->
             </div><!-- /.collapse -->
@@ -68,7 +68,7 @@
             <div class="card-header" role="tab" id="headingThree">
               <h5 class="mb-0">
                 <a class="collapsed text-body" data-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false" aria-controls="collapseThree">
-                  <button type="button" class="btn btn-secondary">大会メニュー</button>
+                  <button type="button" class="btn btn-primary">大会メニュー</button>
                 </a>
               </h5>
             </div><!-- /.card-header -->
@@ -77,7 +77,7 @@
                 <div class="row justify-content-around">
                   <% unless @started %>
                     <%= link_to "参加者を全て取り消す", tournament_participants_clear_path(@tournament), method: :delete, data: { confirm: "取り消ししてよろしいですか？" }, class: "btn btn-lg btn-warning m-1" %>
-                    <%= link_to "参加者を並び替る", tournament_randomize_path(@tournament), data: { confirm: "並び替えてもいいですか？" }, class: "btn btn-lg btn-secondary m-1" %>
+                    <%= link_to "参加者を並び替る", tournament_randomize_path(@tournament), data: { confirm: "並び替えてもいいですか？" }, class: "btn btn-lg btn-primary m-1" %>
                     <% if @participants.count >= 2 %>
                       <%= link_to "大会を始める", tournament_start_path(@tournament), method: :get, data: { confirm: "大会を始めてもいいですか？" }, class: "btn btn-lg btn-success m-1" %>
                     <% end %>
@@ -96,7 +96,7 @@
             <div class="card-header" role="tab" id="headingFour">
               <h5 class="mb-0">
                 <a class="collapsed text-body" data-toggle="collapse" href="#collapseFour" role="button" aria-expanded="false" aria-controls="collapseFour">
-                  <button type="button" class="btn btn-secondary">オプション</button>
+                  <button type="button" class="btn btn-primary">オプション</button>
                 </a>
               </h5>
             </div><!-- /.card-header -->
@@ -134,15 +134,15 @@
         <% end %>
       </div>
       <% unless @tournament.status == '完了' %>
-      <div class="col-lg-4 bg-dark border" id="toggle-matches-opening-or-complete">
+      <div class="col-lg-4" id="toggle-matches-opening-or-complete">
         <div class="row justify-content-between m-1">
-          <span>現在開催中のマッチ</span><p><%= link_to "終了", tournament_toggle_path(@tournament, :state => 'complete'), remote: true, class: "btn btn-secondary" %></p>
+          <span>現在開催中のマッチ</span><p><%= link_to "終了", tournament_toggle_path(@tournament, :state => 'complete'), remote: true, class: "btn btn-primary" %></p>
         </div>
         <div class="d-none d-lg-block"><!-- 画面幅lg以上で表示 -->
           <% if !@matches_opening.blank? %>
             <% @matches_opening.each do |matches| %>
               <%= return_user_from_participant(matches["match"]["player1_id"]).name + " vs " + return_user_from_participant(matches["match"]["player2_id"]).name + "  " %>
-              <%= link_to "報告", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-warning mb-2" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %><br>
+              <%= link_to "報告", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-success mb-2" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %><br>
             <% end %>
           <% else %>
             <p>なし</p>
@@ -155,7 +155,7 @@
                 <% @matches_opening.each do |matches| %>
                   <div class="col-6">
                     <%= return_user_from_participant(matches["match"]["player1_id"]).name + " vs " + return_user_from_participant(matches["match"]["player2_id"]).name + "  " %>
-                    <%= link_to "報告", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-warning mb-2" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %>
+                    <%= link_to "報告", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-success mb-2" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %>
                   </div>
                 <% end %>
               <% else %>
@@ -169,7 +169,7 @@
     </div>
   </div>
   
-  <div class="bg-dark my-1 p-1 border">
+  <div class="my-1 p-1 border">
     <div class="row justify-content-between m-1">
       <div class="m-1">
         <%= will_paginate @participants_search %>
@@ -186,7 +186,7 @@
         <%= form_tag(tournament_path, :method => 'get') do %>
           <div class="d-flex flex-row">
             <%= text_field_tag :search , nil, :class => "form-control" %>
-            <%= submit_tag '検索', :name => nil, :class => 'btn btn-secondary' %>
+            <%= submit_tag '検索', :name => nil, :class => 'btn btn-primary' %>
           </div>
         <% end %>
       </div>
@@ -194,7 +194,7 @@
     
     <% if !@participants_search.blank? %>
       <% @participants_search.each do |participant| %>
-        <div class="bg-dark border m-2 clearfix">
+        <div class="border m-2 clearfix">
           <div class="row p-1">
             <div class="col-3 col-md-2 flex-column align-self-start text-nowrap">
               <div><%= image_tag participant_to_user(participant).image.to_s, class: "img-fluid img-thumbnail rounded m-1", :style => "max-width:60px;" %></div>
@@ -216,7 +216,7 @@
                     <%= hidden_field_tag :user_to, participant.user_id %>
                     <div class="d-flex justify-content-center">
                       <%= f.text_field :text, placeholder: "入力してください", class: "form-control" %>
-                      <%= f.submit "送信", class: "btn btn-secondary" %>
+                      <%= f.submit "送信", class: "btn btn-primary" %>
                     </div>
                   <% end %>
                 <% end %>
