--- a/app/views/users/_title_character.html.erb
+++ b/app/views/users/_title_character.html.erb
@@ -4,7 +4,7 @@
       <span><%= @character.game_title %></span>
     </div>
     <div class="row justify-content-around">
-      <div class="col-md-4 my-2 bg-dark">
+      <div class="col-md-4 my-2 bg-light border">
         <span>メインキャラクター</span><br>
         <div class="my-1">
           <div class="col-8 offset-2 text-center" style="max-height:170px;">
@@ -12,7 +12,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-7 my-2 bg-dark">
+      <div class="col-md-7 my-2 bg-light border">
         <span>サブキャラクター</span><br>
         <div class="my-1">
           <div class="row justify-content-around">
