--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,7 +10,7 @@
   <%= form_tag(users_path, :method => 'get') do %>
   <div class="d-flex flex-row">
     <%= text_field_tag :search, nil, class: "form-control" %>
-    <%= submit_tag '検索', :name => nil, :class => 'btn btn-secondary' %>
+    <%= submit_tag '検索', :name => nil, :class => 'btn btn-primary' %>
   </div>
   <% end %>
 </div>
