--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,8 +10,8 @@
 
 <% if current_user?(@user) && !current_user.admin? %>
 <div class="row justify-content-around mb-3">
-  <%= link_to "新しく大会を作る", new_tournament_path, class: "btn btn-warning m-1" %>
-  <%= link_to "俺より強い奴に会いに行く", tournaments_path, class: "btn btn-secondary m-1" %>
+  <%= link_to "新しく大会を作る", new_tournament_path, class: "btn btn-success m-1" %>
+  <%= link_to "俺より強い奴に会いに行く", tournaments_path, class: "btn btn-primary m-1" %>
 </div>
 <% end %>
 <!-- ピル部分 -->
@@ -96,11 +96,11 @@
   <div class="tab-pane fade" id="tabs-result" role="tabpanel" aria-labelledby="tabs-result-tab">
     <% if !@tournaments.blank? %>
       <p class="my-2">
-        <button type="button" class="btn btn-warning" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+        <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
           検索オプション
         </button>
       </p>
-      <div class="collapse p-2 bg-dark my-2" id="collapseExample">
+      <div class="collapse p-2 bg-light border my-2" id="collapseExample">
         <%= form_with(url: user_path(@user), method: :get) do |fo| %>
           <%= fo.hidden_field :tournaments, value: "tournaments_search" %>
           <div class="m-auto row justify-content-between align-items-center">
@@ -140,7 +140,7 @@
               </div>
             </div>
             <div class="col-lg-12">
-              <%= fo.submit "検索する", class: "btn btn-secondary btn-block my-3" %>
+              <%= fo.submit "検索する", class: "btn btn-primary btn-block my-3" %>
             </div>
           </div>
         <% end %>
@@ -196,7 +196,7 @@
                   <%= f.text_area :text, class: "form-control" %>
                 </div>
                 <div class="col-12">
-                  <%= f.submit "メッセージを送信する", class: "btn btn-secondary btn-block btn-login" %>
+                  <%= f.submit "メッセージを送信する", class: "btn btn-primary btn-block btn-login" %>
                 </div>
               </div>
             <% end %>
@@ -233,7 +233,7 @@
                   <%= fo.text_field :text, class: "form-control" %>
                 </div>
                 <div class="col-12">
-                  <%= fo.submit "検索する", class: "btn btn-secondary btn-block my-2 mail_search" %>
+                  <%= fo.submit "検索する", class: "btn btn-primary btn-block my-2 mail_search" %>
                 </div>
               </div>
               <%= fo.hidden_field :outbox, value: 'outbox_search' %>
@@ -253,7 +253,7 @@
             <%= f.label "本文" %>
             <%= f.text_area :text, class: "form-control" %>
             
-            <%= f.submit "メッセージを送信する", class: "btn btn-secondary btn-block btn-login" %>
+            <%= f.submit "メッセージを送信する", class: "btn btn-primary btn-block btn-login" %>
           <% end %>
         </div>
       </div>
