--- a/app/views/static_pages/introduction.html.erb
+++ b/app/views/static_pages/introduction.html.erb
@@ -4,5 +4,20 @@
 
 <p class="m-2">紹介動画</p>
 <div class="embed-responsive embed-responsive-16by9">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/pwe4No5uosM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/GqEyHgtVNZs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+<div id="introduction" style="width:100px; height:100px; background-color:green;"></div>
+<div id="kanadea" style="display:none">
+  <p class="m-2">悲であった動画</p>
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/xovRPNvAvbo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+</div>
+
+<script>
+$(window).on("turbolinks:load", function(e){
+  $('#introduction').on('click', function() {
+    $('#kanadea').show();
+  });
+});
+</script>
