--- a/app/views/tournaments/_form.html.erb
+++ b/app/views/tournaments/_form.html.erb
@@ -98,7 +98,7 @@
       </div>
     </div>
     
-    <%= f.submit "新規作成", class: "btn btn-secondary btn-block btn-#{yield(:class_text)} my-2",
+    <%= f.submit "新規作成", class: "btn btn-primary btn-block btn-#{yield(:class_text)} my-2",
                              id: "tournament_edit" %>
   <% else # 編集時 %>
     <div class="form-group" id="normal-tournament">
